--- a/index.html
+++ b/index.html
@@ -27,34 +27,33 @@
       }
 
       #frase {
-        margin: 20px;
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         color: #cdcdcd;
-        margin-top: 150px;
+        margin-top: 60px;
       }
 
       button {
         padding: 10px 20px;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         cursor: pointer;
-        border-radius: 20px;
+        border-radius: 25px;
         border: none;
-        margin-top: 160px;
-        width: 300px;
+        margin-top: 100px;
+        width: 400px;
         height: 100px;
+        background-color: #1393b6;
+        color: white;
       }
 
-      table {
-        border: #000000;
-      }
     </style>
   </head>
+  <section class="cont bg-info py-5 text-center mx-auto">
+    <img src="./chucknorris.png">
+    </section>
   <body>
-<table class="table">
     <h1>Frases Célebres de Chuck Norris 👊🏻💥</h1>
     <div id="frase">Aquí aparecerá una frase célebre:</div>
     <button id="nuevaFrase">Generar otra frase</button>
-</table>
     <script src="script.js"></script>
   </body>
 </html>
