Cambio en imagen.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Frases célebres de Chuck Norris</title>
     <style>
       body,
-      frase{
+      frase {
         color: white;
         font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -44,12 +44,11 @@
         background-color: #1393b6;
         color: white;
       }
-
     </style>
   </head>
-  <section class="cont bg-info py-5 text-center mx-auto">
-    <img src="./chucknorris.png">
-    </section>
+  <section>
+    <img src="./chucknorris.png" />
+  </section>
   <body>
     <h1>Frases Célebres de Chuck Norris 👊🏻💥</h1>
     <div id="frase">Aquí aparecerá una frase célebre:</div>
