Creación carpeta assets

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     </style>
   </head>
   <section>
-    <img src="./chucknorris.png" />
+    <img src="./assets/img/chucknorris.png" />
   </section>
   <body>
     <h1>Frases Célebres de Chuck Norris 👊🏻💥</h1>
     <div id="frase">Aquí aparecerá una frase célebre:</div>
     <button id="nuevaFrase">Generar otra frase</button>
-    <script src="script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
